--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=s1rates
 spring.profiles.active=qa
 spring.cloud.config.label=main
 spring.config.import=optional:configserver:http://localhost:8888
+
+spring.cloud.config.username=pluralsight
+spring.cloud.config.password=pluralsight
